--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "qgulp",
 	"description": "A gulp based build process for wordpress",
-	"version": "0.0.1-alpha.2",
+	"version": "0.1.0",
 	"author": "Neonpastell GmbH <multimedia@neonpastell.com> (http://www.neonpastell.com/)",
 	"license": "MIT",
 	"repository": {
@@ -11,9 +11,6 @@
 	"main": "index.js",
 	"bin": {
 		"qgulp": "./cli.js"
-	},
-	"scripts": {
-		"start": "gulp"
 	},
 	"dependencies": {
 		"@babel/core": "^7.1.6",
@@ -43,7 +40,8 @@
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-uglify": "^3.0.1",
 		"imagemin-pngquant": "^6.0.0",
-		"ora": "^3.0.0"
+		"ora": "^3.0.0",
+		"replace": "^1.0.0"
 	},
 	"devDependencies": {}
 }
