--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "qgulp",
 	"description": "A gulp based build process for wordpress",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"author": "Neonpastell GmbH <multimedia@neonpastell.com> (http://www.neonpastell.com/)",
 	"license": "MIT",
 	"repository": {
@@ -39,9 +39,12 @@
 		"gulp-sass": "^4.0.1",
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-uglify": "^3.0.1",
+		"gutil": "^1.6.4",
 		"imagemin-pngquant": "^6.0.0",
 		"ora": "^3.0.0",
-		"replace": "^1.0.0"
+		"replace": "^1.0.0",
+		"vinyl-ftp": "^0.6.1",
+		"yargs": "^12.0.5"
 	},
 	"devDependencies": {}
 }
